<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.devesh.ecell_app.Social_Initiative"
    android:gravity="center_horizontal"
    android:layout_marginTop="10dip"
    android:orientation="vertical">

    <TextView android:text="@string/Make_Happen_week" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#111"
        android:layout_marginTop="10dip"
        android:gravity="center_vertical|center_horizontal"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Description_about_make_happen_week"
        android:textSize="12sp"
        android:layout_marginTop="20dip"
        android:textColor="#333"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Descrition_about_make_happen_week_2"
        android:textSize="12sp"
        android:layout_marginTop="20dip"
        android:textColor="#333"/>
</LinearLayout>
